Start the responsive design part

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marketify</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/mediaqueries.css">
 
 </head>
 
@@ -22,6 +23,30 @@
                 <li><a class="button button--primary about__button" href="#contact-us">Requested a quote</a></li>
             </ul>
         </nav>
+
+        <nav id="menu-nav" class="about-menu__nav">
+            <div class="about-menu__logo about__logo">Marketify</div>
+
+            <div class="about-menu__items">
+                <div class="about-menu__icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+
+                <ul class="about-menu__list">
+                    <li class="about-menu__item"><a href="#about-us">About us</a></li>
+                    <li class="about-menu__item"><a href="#services">Services</a></li>
+                    <li class="about-menu__item"><a href="#use-cases">Use Cases</a></li>
+                    <li class="about-menu__item"><a href="#working-process">Pricing</a></li>
+                    <li class="about-menu__item"><a href="#blogs">Blog</a></li>
+                    <li class="about-menu__item"><a href="#contact-us">Requested a quote</a></li>
+                </ul>
+            </div>
+
+
+        </nav>
+
         <header class="about__header">
             <div class="about__content">
                 <h1 class="about__title">Navigating the digital landscape for success</h1>
