Adaptation for mobile size screen

--- a/index.html
+++ b/index.html
@@ -53,16 +53,22 @@
         <header class="about__header">
             <div class="about__content">
                 <h1 class="about__title">Navigating the digital landscape for success</h1>
-                <p class="about__p">Our digital marketing agency helps businesses grow and succeed online through a
+                <p class="about__p hiding">Our digital marketing agency helps businesses grow and succeed online through
+                    a
                     range of services
                     including SEO, PPC,
                     social media marketing, and content creation.</p>
-                <a class="button button--primary" href="">Book a consultation</a>
+                <a class="button button--primary hiding" href="">Book a consultation</a>
             </div>
-            <div class="about__image">
-                <!-- <img src="assets/images/about-image.png" alt="Image for the introduction"> -->
-            </div>
+            <div class="about__image"></div>
         </header>
+        <div class="about__content about__content--primary">
+            <p class="about__p">Our digital marketing agency helps businesses grow and succeed online through a
+                range of services
+                including SEO, PPC,
+                social media marketing, and content creation.</p>
+            <a class="button button--primary" href="">Book a consultation</a>
+        </div>
 
         <div class="about__logos">
             <img src="assets/images/amazon-logo.png" alt="Amazon logo">
@@ -293,7 +299,7 @@
     <section id="working-process" class="process">
         <div class="heading">
             <h2 class="block__title">Our Working Process</h2>
-            <p class="service__p">Step-by-Step Guide to Achieving Your Business Goals</p>
+            <p>Step-by-Step Guide to Achieving Your Business Goals</p>
         </div>
         <div class="process__container js-process__container"></div>
     </section>
