Add icon to the website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Marketify</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/mediaqueries.css">
+    <link rel="shortcut icon" href="./assets/icons/website-icon.png" type="image/x-icon">
 
 </head>
 
@@ -402,9 +403,12 @@
                     <li class="contact-footer__navigation-item"><a href="#blogs">Blog</a></li>
                 </ul>
                 <div class="contact-footer__navigation-links">
-                    <div class="contact-footer__navigation-linkedin"></div>
-                    <div class="contact-footer__navigation-facebook"></div>
-                    <div class="contact-footer__navigation-twiter"></div>
+                    <div onclick="window.location.href=`https://www.linkedin.com/`"
+                        class="contact-footer__navigation-linkedin"></div>
+                    <div onclick="window.location.href=`https://www.facebook.com/`"
+                        class="contact-footer__navigation-facebook"></div>
+                    <div onclick="window.location.href=`https://www.twitter.com/`"
+                        class="contact-footer__navigation-twiter"></div>
                 </div>
             </div>
 
